initialized lozad and applied to all pages

--- a/community.html
+++ b/community.html
@@ -27,32 +27,32 @@
 
     <div id="gallery"> 
         <img src="community/cover.jpg">
-            <img src="community/contents.jpg">
-            <img src="community/40-41.jpg">
-            <img src="community/22-23.jpg">
+            <img class="lozad" data-src="community/contents.jpg">
+            <img class="lozad" data-src="community/40-41.jpg">
+            <img class="lozad" data-src="community/22-23.jpg">
             <div class="diptych">
-                <img src="community/20-21.jpg">
-                <img src="community/14-15.jpg">  
+                <img class="lozad" data-src="community/20-21.jpg">
+                <img class="lozad" data-src="community/14-15.jpg">  
             </div>
-            <img src="community/12-13.jpg">
+            <img class="lozad" data-src="community/12-13.jpg">
             <div class="caption"><i>A Community is a Garden</i>, 2020.<span class="citation">Typeset in Minipax, designed by Raphaël Ronot for Velvetyne Type Foundry</span></div>
             <div class="triptych">
-                <img src="community/44-45.jpg">
-                <img src="community/48-49.jpg">
-                <img src="community/50-51.jpg">
+                <img class="lozad" data-src="community/44-45.jpg">
+                <img class="lozad" data-src="community/48-49.jpg">
+                <img class="lozad" data-src="community/50-51.jpg">
             </div>
             <div class="triptych">
-                <img src="community/36-37.jpg">
-                <img src="community/12-13.jpg">
-                <img src="community/intro.jpg">
+                <img class="lozad" data-src="community/36-37.jpg">
+                <img class="lozad" data-src="community/12-13.jpg">
+                <img class="lozad" data-src="community/intro.jpg">
             </div>
-            <img src="community/practicepage.jpg">
-            <img src="community/32-33.jpg"> 
+            <img class="lozad" data-src="community/practicepage.jpg">
+            <img class="lozad" data-src="community/32-33.jpg"> 
             <div class="diptych">
-                    <img src="community/34-35.jpg">  
-                    <img src="community/62-63.jpg">
+                    <img class="lozad" data-src="community/34-35.jpg">  
+                    <img class="lozad" data-src="community/62-63.jpg">
             </div>
-        <img src="community/back.jpg">
+        <img class="lozad" data-src="community/back.jpg">
     </div>
        
         <div id="projfooter">
@@ -68,5 +68,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
     <script src="assets/jquery.min.js"></script>
     <script src="js/projects.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/lozad"></script>
 </body>
 </html>
