--- a/joshualeifer.html
+++ b/joshualeifer.html
@@ -23,16 +23,16 @@
     </div>
 
     <div id="gallery">
-        <img src="joshualeifer/jleifer1.png">
+        <img class="lozad" data-src="joshualeifer/jleifer1.png">
         <div class="caption">Joshua Leifer dotcom, 2020</div>
-        <img src="joshualeifer/jleifer-12.png">
+        <img class="lozad" data-src="joshualeifer/jleifer-12.png">
         <div class="diptych">
-            <img src="joshualeifer/jleifer-08.png">  
-            <img src="joshualeifer/jleifer-11.png">
+            <img class="lozad" data-src="joshualeifer/jleifer-08.png">  
+            <img class="lozad" data-src="joshualeifer/jleifer-11.png">
         </div>
         <div class="diptych">
-            <img src="joshualeifer/jleifer-10.png">  
-            <img src="joshualeifer/jleifer-07.png">
+            <img class="lozad" data-src="joshualeifer/jleifer-10.png">  
+            <img class="lozad" data-src="joshualeifer/jleifer-07.png">
         </div>
     </div>
        
@@ -48,6 +48,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
     <script src="assets/jquery.min.js"></script>
     <script src="js/projects.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/lozad"></script>
 
 
 </body>
