--- a/mariovoid.html
+++ b/mariovoid.html
@@ -28,10 +28,10 @@
     <div id="gallery">
         <img src="mariovoid/thumbnail.png">
         <div class="caption">Super Mario Void, 2019</div>
-        <img src="mariovoid/smv4.png">
-        <img src="mariovoid/smv1.png">
-        <img src="mariovoid/smv2.png">
-        <img src="mariovoid/smv3.png">
+        <img class="lozad" data-src="mariovoid/smv4.png">
+        <img class="lozad" data-src="mariovoid/smv1.png">
+        <img class="lozad" data-src="mariovoid/smv2.png">
+        <img class="lozad" data-src="mariovoid/smv3.png">
          </div>
        
          <div id="projfooter">
@@ -47,6 +47,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
     <script src="assets/jquery.min.js"></script>
     <script src="js/projects.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/lozad"></script>
 
 
 </body>
