--- a/postcursor.html
+++ b/postcursor.html
@@ -29,13 +29,13 @@
         <img src="postcursor/postcursor-01.png">
         <div class="caption"><i>Postcursor / Starrynite</i>, 2020.</div>
         <div class="diptych">
-            <img src="postcursor/postcursor-02.png">  
-            <img src="postcursor/postcursor-04.png">
+            <img class="lozad" data-src="postcursor/postcursor-02.png">  
+            <img class="lozad" data-src="postcursor/postcursor-04.png">
         </div>
-            <img src="postcursor/starrynite-03.png">  
+            <img class="lozad" data-src="postcursor/starrynite-03.png">  
         <div class="diptych">
-            <img src="postcursor/starrynite-04.png">  
-            <img src="postcursor/starrynite-05.png">
+            <img class="lozad" data-src="postcursor/starrynite-04.png">  
+            <img class="lozad" data-src="postcursor/starrynite-05.png">
         </div>
     </div>
        
@@ -51,6 +51,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
     <script src="assets/jquery.min.js"></script>
     <script src="js/projects.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/lozad"></script>
 
 
 </body>
