--- a/reconnatypeface.html
+++ b/reconnatypeface.html
@@ -32,10 +32,10 @@
     <div id="gallery">
         <img src="reconna/reconna screenie.png">
             <div class="caption">Reconna Typeface, 2019</div>
-        <img src="reconna/IMG_1271-2.jpg">
-        <img src="reconna/IMG_1247-2.jpg">
-        <img src="reconna/IMG_1234-2.jpg">
-        <img src="reconna/IMG_1237-2.jpg">
+        <img class="lozad" data-src="reconna/IMG_1271-2.jpg">
+        <img class="lozad" data-src="reconna/IMG_1247-2.jpg">
+        <img class="lozad" data-src="reconna/IMG_1234-2.jpg">
+        <img class="lozad" data-src="reconna/IMG_1237-2.jpg">
          </div>
        
          <div id="projfooter">
@@ -62,6 +62,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
     <script src="assets/jquery.min.js"></script>
     <script src="js/projects.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/lozad"></script>
 
 
 </body>
