--- a/spaceopera.html
+++ b/spaceopera.html
@@ -22,7 +22,7 @@
 
     <div id="gallery">
         <img src="spaceopera/spaceopera1.jpeg"> 
-        <img src="spaceopera/spaceopera2.jpeg"> 
+        <img class="lozad" data-src="spaceopera/spaceopera2.jpeg"> 
     </div>
        
     <div id="projfooter">
@@ -39,6 +39,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
     <script src="assets/jquery.min.js"></script>
     <script src="js/projects.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/lozad"></script>
 
 
 </body>
