--- a/index.html
+++ b/index.html
@@ -57,31 +57,31 @@
 <div class="listing" data-link="nytimes.html">
     <div class="info"><span class="title">Design and AD</span>
     <br><span class="description">The New York Times</span></div>
-    <div class="images"><img src="nytimes/nyt15.png"><img src="nytimes/powell-obit.png"></div>
+    <div class="images"><img class="lozad" data-src="nytimes/nyt15.png"><img class="lozad" data-src="nytimes/powell-obit.png"></div>
 </div> 
 
 <div class="listing" data-link="spaceopera.html">
     <div class="info"><span class="title">Space Opera</span>
     <br><span class="description">Baffler Magazine No. 61</span></div>
-    <div class="images"><img src="spaceopera/spaceopera1.jpeg"><img src="spaceopera/spaceopera2.jpeg"></div>
+    <div class="images"><img class="lozad" data-src="spaceopera/spaceopera1.jpeg"><img class="lozad" data-src="spaceopera/spaceopera2.jpeg"></div>
 </div>
 
 <div class="listing" data-link="transientgrounds.html">
     <div class="info"><span class="title"></i>Transient Grounds</i></span>
     <br><span class="description">ACOMPI x NARS Foundation</span></div>
-    <div class="images"><img src="transientgrounds/subwayposter1.png"><img src="transientgrounds/subwayposter2.png"></div>
+    <div class="images"><img class="lozad" data-src="transientgrounds/subwayposter1.png"><img class="lozad" data-src="transientgrounds/subwayposter2.png"></div>
 </div>
 
 <div class="listing" data-link="cyberotica.html">
     <div class="info"><span class="title"></i>Cyberotica</i></span>
     <br><span class="description">Editorial Design</span></div>
-    <div class="images"><img src="cyberotica/radicallove.jpg"><img src="cyberotica/index.jpg"></div>
+    <div class="images"><img class="lozad" data-src="cyberotica/radicallove.jpg"><img class="lozad" data-src="cyberotica/index.jpg"></div>
 </div>
 
 <div class="listing" data-link="joshualeifer.html">
     <div class="info"><span class="title">Portfolio</span>
     <br> <span class="description">Joshua Leifer</span></div>
-    <div class="images"><img src="joshualeifer/jleifer1.png"><img src="joshualeifer/joshualeifer copy.gif"></div>   
+    <div class="images"><img class="lozad" data-src="joshualeifer/jleifer1.png"><img class="lozad" data-src="joshualeifer/joshualeifer copy.gif"></div>   
 </div>
 
 <!--<div class="listing" data-link="discoveryourair.html">
@@ -92,13 +92,13 @@
 <div class="listing" data-link="mariovoid.html">
     <div class="info"><span class="title">Super Mario Void</span>
         <br> <span class="description">Web design and development</span></div>
-        <div class="images"><img src="mariovoid/thumbnail.png"><img src="mariovoid/gameover.png"></div>
+        <div class="images"><img class="lozad" data-src="mariovoid/thumbnail.png"><img class="lozad" data-src="mariovoid/gameover.png"></div>
 </div>
 
 <div class="listing" data-link="sober21.html">
     <div class="info"><span class="title"></i>Sober 21</i></span>
     <br><span class="description">The Creative Independent</span></div>
-    <div class="images"><img src="sober21/IMG_6556.jpg"><img src="sober21/IMG_6445 copy.jpg"></div>
+    <div class="images"><img class="lozad" data-src="sober21/IMG_6556.jpg"><img class="lozad" data-src="sober21/IMG_6445 copy.jpg"></div>
 </div>
 
 <!--<div class="listing" data-link="tci5.html">
@@ -110,7 +110,7 @@
 <div class="listing" data-link="reconnatypeface.html">
     <div class="info"><span class="title">Reconna</span>
     <br> <span class="description">Type Design</span></div>   
-    <div class="images"><img src="reconna/IMG_1237-2.jpg"><img src="reconna/IMG_1234-2.jpg"></div>
+    <div class="images"><img class="lozad" data-src="reconna/IMG_1237-2.jpg"><img class="lozad" data-src="reconna/IMG_1234-2.jpg"></div>
 </div>
 
 <!--<div class="listing" data-link="armour.html">
@@ -122,7 +122,7 @@
 <div class="listing" data-link="reflections.html">
     <div class="info"><span class="title">Reflections on Practice</span>
     <br><span class="description">Editorial Design<br></span></div>
-    <div class="images"><img src="reflections/IMG_6544-copy.jpg"><img src="reflections/IMG_6714-copy.jpg"></div>
+    <div class="images"><img class="lozad" data-src="reflections/IMG_6544-copy.jpg"><img class="lozad" data-src="reflections/IMG_6714-copy.jpg"></div>
 </div>
 
 <!--<div class="listing" data-link="majorarcana.html">
@@ -134,7 +134,7 @@
 <div class="listing" data-link="postcursor.html">
     <div class="info"><span class="title">Postcursor / Starrynite</span>
     <br><span class="description">Machine learning, web development</span></div>
-    <div class="images"><img src="postcursor/postcursor-02.png"><img src="postcursor/postcursor-04.png"></div>
+    <div class="images"><img class="lozad" data-src="postcursor/postcursor-02.png"><img class="lozad" data-src="postcursor/postcursor-04.png"></div>
 </div>
 
 
@@ -152,6 +152,7 @@
     crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 <script src="js/projects.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/lozad"></script>
 
 
 </body>
