--- a/reflections.html
+++ b/reflections.html
@@ -25,23 +25,23 @@
     <div id="gallery">
         <img src="reflections/IMG_6544-copy.jpg">
         <div class="caption"><i>Reflections on Practice</i>, 2019</div>
-        <img src="reflections/IMG_6714-copy.jpg">
+        <img class="lozad" data-src="reflections/IMG_6714-copy.jpg">
         <div class="diptych">
-            <img src="reflections/IMG_6642-copy.jpg">
-            <img src="reflections/IMG_6658-copy.jpg">
+            <img class="lozad" data-src="reflections/IMG_6642-copy.jpg">
+            <img class="lozad" data-src="reflections/IMG_6658-copy.jpg">
         </div>
         <div class="triptych">
-            <img src="reflections/IMG_6740-copy.jpg">
-            <img src="reflections/IMG_6595-copy.jpg">
-            <img src="reflections/IMG_6764-copy.jpg">
+            <img class="lozad" data-src="reflections/IMG_6740-copy.jpg">
+            <img class="lozad" data-src="reflections/IMG_6595-copy.jpg">
+            <img class="lozad" data-src="reflections/IMG_6764-copy.jpg">
         </div>
-        <img src="reflections/IMG_6605-copy.jpg">
+        <img class="lozad" data-src="reflections/IMG_6605-copy.jpg">
         <div class="diptych">
-            <img src="reflections/IMG_6785-copy.jpg">
-            <img src="reflections/IMG_6772.jpg">
+            <img class="lozad" data-src="reflections/IMG_6785-copy.jpg">
+            <img class="lozad" data-src="reflections/IMG_6772.jpg">
         </div>
-        <img src="reflections/IMG_6800-copy.jpg">
-        <img src="reflections/IMG_6576-copy.jpg">
+        <img class="lozad" data-src="reflections/IMG_6800-copy.jpg">
+        <img class="lozad" data-src="reflections/IMG_6576-copy.jpg">
          </div>
        
          <div id="projfooter">
@@ -56,6 +56,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
     <script src="assets/jquery.min.js"></script>
     <script src="js/projects.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/lozad"></script>
 
 
 </body>
