--- a/sober21.html
+++ b/sober21.html
@@ -26,27 +26,27 @@
     <div id="gallery">
         <img src="sober21/IMG_6556.jpg">
         <div class="diptych">
-            <img src="sober21/IMG_6445 copy.jpg">  
-            <img src="sober21/IMG_6476.jpg">
+            <img class="lozad" data-src="sober21/IMG_6445 copy.jpg">  
+            <img class="lozad" data-src="sober21/IMG_6476.jpg">
         </div>
         <div class="caption"><i>Sober 21</i>, 2021</div>
-            <img src="sober21/Sober 21 40 copy.png">
-            <img src="sober21/Sober21 72 copy.png">
+            <img class="lozad" data-src="sober21/Sober 21 40 copy.png">
+            <img class="lozad" data-src="sober21/Sober21 72 copy.png">
             <div class="diptych">
-                <img src="sober21/Sober21 32 copy.png">
-                <img src="sober21/Sober 21 30 copy.png">
+                <img class="lozad" data-src="sober21/Sober21 32 copy.png">
+                <img class="lozad" data-src="sober21/Sober 21 30 copy.png">
             </div>
             <div class="diptych">
-                <img src="sober21/Sober 21 12 copy.png">
-                <img src="sober21/Sober 21 16 copy.png">
+                <img class="lozad" data-src="sober21/Sober 21 12 copy.png">
+                <img class="lozad" data-src="sober21/Sober 21 16 copy.png">
             </div>
-            <img src="sober21/Sober21 76 copy.png">
-            <img src="sober21/Sober 21 44 copy.png">
+            <img class="lozad" data-src="sober21/Sober21 76 copy.png">
+            <img class="lozad" data-src="sober21/Sober 21 44 copy.png">
             <div class="diptych">
-                <img src="sober21/Sober 21 62 copy.png">
-                <img src="sober21/Sober 21 64 copy.png">
+                <img class="lozad" data-src="sober21/Sober 21 62 copy.png">
+                <img class="lozad" data-src="sober21/Sober 21 64 copy.png">
             </div>
-            <img loop=infinite src="sober21/Sober 21 copy.gif">
+            <img loop=infinite class="lozad" data-src="sober21/Sober 21 copy.gif">
     </div>
        
     <div id="projfooter">
@@ -63,6 +63,7 @@
     <script src="assets/jquery.min.js"></script>
     <script src="js/universal.js"></script>
     <script src="js/projects.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/lozad"></script>
 
 
 </body>
