--- a/transientgrounds.html
+++ b/transientgrounds.html
@@ -26,10 +26,10 @@
     <div id="gallery">
         <img src="transientgrounds/subwayposter2.png">  
         <div class="caption">Poster for <i>Transient Grounds</i>, 2021</div>
-        <img src="transientgrounds/subwayposter1.png">
-        <img src="transientgrounds/poster.png">  
-            <img src="transientgrounds/banner.png">
-            <img src="transientgrounds/instagram.png">
+        <img class="lozad" data-src="transientgrounds/subwayposter1.png">
+        <img class="lozad" data-src="transientgrounds/poster.png">  
+            <img class="lozad" data-src="transientgrounds/banner.png">
+            <img class="lozad" data-src="transientgrounds/instagram.png">
     </div>
        
     <div id="projfooter">
@@ -46,6 +46,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
     <script src="assets/jquery.min.js"></script>
     <script src="js/projects.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/lozad"></script>
 
 
 </body>
