--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div id="aboutContainer">
     <div id="about" style="display:none;">
         <a class="name indexname"></a>
-       <h3 class="p"><p>Mikki Janower is a designer and researcher logging on from Brooklyn, New York. She's currently working at Squarespace; and maintaining an independent practice across media, music, education, and the arts.</h3>
+       <h3 class="p"><p>Mikki Janower is a designer and researcher logging on from Brooklyn, New York. She maintains an independent practice across media, music, education, and the arts; and works as a visual designer at Squarespace.</h3>
         <section class = "twocols">
             <div class="contact"><p style="opacity:.5; margin-bottom:4px;">Contact</p><a href="mailto:info@mikki.studio" target="_blank">Email</a><br><a href="https://www.instagram.com/_miikki/" target="_blank"> Instagram</a><br><a href="https://twitter.com/mikkijanower" target="_blank"> Twitter</a><br><a href="https://www.are.na/mikki-janower" target="_blank"> Are.na</a><!--<br><a href="https://www.goodreads.com/user/show/95316335-mikki-janower" target = "_blank">Goodreads</a><br>--></div>
             <div class="press"><p style="opacity:.5; margin-bottom:4px;">Press & Awards</p><p><a href="https://thedesignkids.org/awards/tdk-awards-20/" target="_blank">TDK Awards 2020</a><br><a href="https://www.commonfield.org/convenings/4496/program/4858/a-community-is-a-garden-tools-for-collaboration" target="_blank">Common Fields: Tools for Collaboration</a><br><a href="https://readymag.com/u1881633060/2361167/" target="_blank">Guggenheim: Sustainable Futures</a><br><a href="https://samfoxschool.wustl.edu/people/alumni-spotlights/19-mikki-janower-bfa-in-communication-design-20" target="_blank">Sam Fox Alumni Spotlight</a></p></div>
