--- a/spaceopera.html
+++ b/spaceopera.html
@@ -17,7 +17,7 @@
 <!--------------------------insert project information in this section ONLY----------------------->
    <section id="project" style="display:none">
  
-    <div id="description"><p>Cover art for vol. 61 of <a href = "https://thebaffler.com/" target="_blank">The Baffler</a>. The simple design uses found footage from the Apollo Missions.</p><p>Art direction by <a href="https://noideas.website/" target="_blank">No Ideas</a>.</p></div>
+    <div id="description"><p>Cover art for vol. 61 of <a href = "https://thebaffler.com/" target="_blank">The Baffler</a>, an exploration of the cosmos and its discontents. The simple design collages found footage from the Apollo Missions.</p><p>Art direction by <a href="https://noideas.website/" target="_blank">No Ideas</a>.</p></div>
 </div>
 
     <div id="gallery">
