--- a/reconnatypeface.html
+++ b/reconnatypeface.html
@@ -20,13 +20,13 @@
 
 
     <div id="description"><p><i>Reconna</i> is a prototype inspired letterforms by found in 20th-century Italian print archives. The condensed serif has high ascenders and angled serifs. Glyph set includes numerals, basic punctuation, and a variety of symbols. </p>
-        <p>This typeface would not exist without instruction and encouragement from <a href="https://alessiodellena.com/" target="_blank">Alessio D'Ellena.</a> You can download the full specimen <a href="https://files.cargocollective.com/c186171/Reconna_Specimen.pdf" target= "_blank" style="font-size:14px">here.</a></p>
+        <p>This typeface would not exist without instruction and encouragement from <a href="https://alessiodellena.com/" target="_blank">Alessio D'Ellena.</a> You can download the full specimen <a href="https://files.cargocollective.com/c186171/Reconna_Specimen.pdf" target= "_blank">here.</a></p>
         </div>
         <div id="reconnatest">
             <!--      autofocus means text box will have clicker in it immediately-->
                     <textarea id="text" spellcheck="false">Take Reconna for a spin! Write your deepest secret here.</textarea>
-                    <td><input type="range" min="12" max="100" value="30" id="font-size"></td></tr></tbody></table>
-            <div class=sliderlabel><span class="labelreg">12px</span><span class="labelreg" id="fontsize">Type size: 30px</span><span class="labelreg">100px</span></div>
+                    <td><input type="range" min="12" max="100" value="24" id="font-size"></td></tr></tbody></table>
+            <div class=sliderlabel><span>12px</span><span id="fontsize">Type size: 30px</span><span>100px</span></div>
         </div>  
         
     <div id="gallery">
