--- a/mhns.html
+++ b/mhns.html
@@ -29,7 +29,7 @@
         <img src="mhns/mhns.png">
             <img class="lozad" data-src="mhns/mhns4.png">
             <img class="lozad" data-src="mhns/mhns3.png">
-            <div class="lozad" data-class="caption">Web and social graphics for <i>Money Has No Smell</i>.<span class="citation">Typeset in Friz Quadrata Pro by Ernst Friz and Victor Caruso; and Radion A by General Type Studio.</span></div>
+            <div data-class="caption">Web and social graphics for <i>Money Has No Smell</i>.<span class="citation">Typeset in Friz Quadrata Pro by Ernst Friz and Victor Caruso; and Radion A by General Type Studio.</span></div>
             <img class="lozad" data-src="mhns/catgalog.gif">
             <div class="diptych">
                 <img class="lozad" data-src="mhns/mhns5.png">
