initialized instantclick.js to preload links

--- a/cyberotica.html
+++ b/cyberotica.html
@@ -67,12 +67,12 @@
 <!--<div class="querytown"></div>-->
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
     <script src="assets/jquery.min.js"></script>
     <script src="js/projects.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/lozad"></script>
 
-
+    <script src="js/instantclick.min.js" data-no-instant></script>
+    <script data-no-instant>InstantClick.init();</script>
 </body>
 
 </html>
