--- a/reconnatypeface.html
+++ b/reconnatypeface.html
@@ -59,12 +59,12 @@
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
 <section class="bottom"></section>
     
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
     <script src="assets/jquery.min.js"></script>
     <script src="js/projects.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/lozad"></script>
 
-
+    <script src="js/instantclick.min.js" data-no-instant></script>
+    <script data-no-instant>InstantClick.init();</script>
 </body>
 
 </html>
