--- a/index.html
+++ b/index.html
@@ -146,16 +146,11 @@
 </section>  
 <!--<div class="querytown"></div>-->
 
-<script
-    src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-    crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+<script src="assets/jquery.min.js"></script>
 <script src="js/projects.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/lozad"></script>
 
-<script src="js/instantclick.min.js" data-no-instant></script>
-<script data-no-instant>InstantClick.init();</script>
+
 </body>
 
 </html>
