added Le Ren case study

--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
     <div class="images"><img src="community/contents.jpg"><img src="community/cover.jpg"></div>
 </div>
 
+<div class="listing" data-link="leren.html">
+    <div class="info"><span class="title">Site + Identity</span>
+    <br><span class="description">Le Ren</span></div>
+    <div class="images"><img class="lozad" data-src="leren/wordmark-blackbg.png"><img class="lozad" data-src="leren/leren-cover.gif"></div>
+</div> 
+
 <div class="listing" data-link="nytimes.html">
     <div class="info"><span class="title">Design and AD</span>
     <br><span class="description">The New York Times</span></div>
