--- a/leren.html
+++ b/leren.html
@@ -20,22 +20,23 @@
 <!--------------------------insert project information below this line----------------------->
 
     <div id="description">
-        <p><i>Money Has No Smell</i> presents works by three artists: Ignacio Gatica, Mariana Parisca, and Gabriella Torres-Ferrer. Curated by <a href="https://www.acompi.nyc/money-has-no-smell" target="_blank">ACOMPI</a> (Jack Radley and Constanza Valenzuela) and mentored by Rosario Güiraldes, the exhibition brings together recent works that trace flows of currency to and from the artists’ places of origin, in the process addressing the complexity of globalized and interdependent financial systems.</p>
-        <p>The exhibition's identity co-opts the language of capital, acknowledging its staying power, ubiquity, and bizarre camp. Pinned beneath a labyrinth of vector art — pulled from cryptocurrency renders and flattened into a simulated watermark — lies the exhibition's logo, set in a typeface recognizable by its presence on NYPD's headquarters; Chilean government communications; and other emblems of capitalist authority. The accompanying catalogue, set in both orientations, asks the viewer to consider its content from multiple angles.</p>
-    <p>To learn more about <i>Money Has No Smell</i> and its artworks, visit <a href="https://cueartfoundation.org/money-has-no-smell" target="_blank">CUE Art Foundation,</a> a nonprofit that works to present varied perspectives in the arts.</p></div>
+    <p>Visual identity — including wordmark, website, and tour collateral — for Montreal-based artist Le Ren. The system was built to scaffold her world-wise lyrics and cinegenic presence, in conversation with her music: a sentimental patchwork of bluegrass, folk, country, and rock. Her website features minimal typographic hierarchy, creating a quiet, reverent space for her work; and her wordmark pays elegant homage to hand-lettered title cards.</p>
+    <p>Learn more at <a href="https://le-ren.com" target="_blank">le-ren.com</a>, or <a href = "https://open.spotify.com/artist/338ANSuWEHPphBye1qDGvF?si=8S5hPLgFQ3CYF1TWdDOKQA" target="_blank">stream her music on Spotify</a>.</p></div>
     </div>
 
     <div id="gallery">
-        <img src="leren/leren7.png">
-            <img class="lozad" data-src="leren/leren8.png">
-            <img class="lozad" data-src="leren/leren9.png">
-            <div class="caption">Web and social graphics for <i>Money Has No Smell</i>.<span class="citation">Typeset in Friz Quadrata Pro by Ernst Friz and Victor Caruso; and Radion A by General Type Studio.</span></div>
-            <img src="mhns/catgalog.gif">
+        <img src="leren/leren.gif">
+        <img class="lozad" data-src="leren/leren_mobile.png">
+            <div class="caption">Site for Le Ren.<span class="citation">Cinematography by Ali Van Der Kruyk</span></div>
+            <img class="lozad" data-src="leren/wordmark-blackbg.png"> 
             <div class="diptych">
-                <img class="lozad" data-src="mhns/mhns5.png">
-                <img class="lozad" data-src="mhns/mhns13.png">  
+                <img class="lozad" data-src="leren/wordmark-close2.png"> 
+                <img class="lozad" data-src="leren/wordmark-close1.png">
             </div>
-            
+            <div class="caption">Le Ren's wordmark is a custom redraw of Bellissima Script with a calligraphic lilt, modeled after vintage title cards.</div>
+            <img class="lozad" data-src="leren/leren2-coloralt.png"> 
+            <img class="lozad" data-src="leren/onscreen_footage.gif"> 
+            <div class="caption">Excerpts from a digital flyer listing Le Ren's 2021 tour dates.<span class="citation">Cinematography by Ali Van Der Kruyk</span></div>
     </div>
        
     <div id="projfooter">
