--- a/index.html
+++ b/index.html
@@ -45,102 +45,79 @@
 <div class="listing"  data-link="mhns.html">
     <div class="info"><span class="title"><i>Money Has No Smell</i></span>
     <br><span class="description">CUE Art Foundation</span></div>
-    <div class="images"><img src="mhns/mhns.png"><img src="mhns/catgalog.gif"></div>
+    <div class="images"><img src="mhns/mhns-thumbnail.png"><img src="mhns/catalog-thumbnail.gif"></div>
 </div>
 
 <div class="listing"  data-link="community.html">
     <div class="info"><span class="title"><i>A Community is a Garden</i></span>
     <br><span class="description">The Guggenheim Museum</span></div>
-    <div class="images"><img src="community/contents.jpg"><img src="community/cover.jpg"></div>
+    <div class="images"><img src="community/contents-thumbnail.jpg"><img src="community/cover-thumbnail.jpg"></div>
 </div>
 
 <div class="listing" data-link="leren.html">
     <div class="info"><span class="title">Site + Identity</span>
     <br><span class="description">Le Ren</span></div>
-    <div class="images"><img class="lozad" data-src="leren/wordmark-blackbg.png"><img class="lozad" data-src="leren/leren-cover.gif"></div>
+    <div class="images"><img class="lozad" data-src="leren/wordmark-thumbnail.png"><img class="lozad" data-src="leren/leren-thumbnail.gif"></div>
 </div> 
 
 <div class="listing" data-link="nytimes.html">
     <div class="info"><span class="title">Design and AD</span>
     <br><span class="description">The New York Times</span></div>
-    <div class="images"><img class="lozad" data-src="nytimes/nyt15.png"><img class="lozad" data-src="nytimes/powell-obit.png"></div>
+    <div class="images"><img class="lozad" data-src="nytimes/nyt15-thumbnail.png"><img class="lozad" data-src="nytimes/powell-thumbnail.png"></div>
 </div> 
 
 <div class="listing" data-link="spaceopera.html">
     <div class="info"><span class="title">Space Opera</span>
     <br><span class="description">Baffler Magazine No. 61</span></div>
-    <div class="images"><img class="lozad" data-src="spaceopera/spaceopera1.jpeg"><img class="lozad" data-src="spaceopera/spaceopera2.jpeg"></div>
+    <div class="images"><img class="lozad" data-src="spaceopera/spaceopera1-thumbnail.jpeg"><img class="lozad" data-src="spaceopera/spaceopera2-thumbnail.jpeg"></div>
 </div>
 
 <div class="listing" data-link="transientgrounds.html">
     <div class="info"><span class="title"></i>Transient Grounds</i></span>
     <br><span class="description">ACOMPI x NARS Foundation</span></div>
-    <div class="images"><img class="lozad" data-src="transientgrounds/subwayposter1.png"><img class="lozad" data-src="transientgrounds/subwayposter2.png"></div>
+    <div class="images"><img class="lozad" data-src="transientgrounds/subwayposter1-thumbnail.png"><img class="lozad" data-src="transientgrounds/subwayposter2-thumbnail.png"></div>
 </div>
 
 <div class="listing" data-link="cyberotica.html">
     <div class="info"><span class="title"></i>Cyberotica</i></span>
     <br><span class="description">Editorial Design</span></div>
-    <div class="images"><img class="lozad" data-src="cyberotica/radicallove.jpg"><img class="lozad" data-src="cyberotica/index.jpg"></div>
+    <div class="images"><img class="lozad" data-src="cyberotica/radicallove-thumbnail.jpg"><img class="lozad" data-src="cyberotica/index-thumbnail.jpg"></div>
 </div>
 
 <div class="listing" data-link="joshualeifer.html">
     <div class="info"><span class="title">Portfolio</span>
     <br> <span class="description">Joshua Leifer</span></div>
-    <div class="images"><img class="lozad" data-src="joshualeifer/jleifer1.png"><img class="lozad" data-src="joshualeifer/joshualeifer copy.gif"></div>   
+    <div class="images"><img class="lozad" data-src="joshualeifer/jleifer1-thumbnail.png"><img class="lozad" data-src="joshualeifer/joshualeifer-thumbnail.gif"></div>   
 </div>
 
-<!--<div class="listing" data-link="discoveryourair.html">
-    <div class="info"><span class="title">Discover Your Air</span>
-        <br> <span class="description">Nike X Foot Locker</span></div>
-        <div class="images"><img src="discoveryourair/Bumper-Sticker.jpg"><img src="discoveryourair/Cassette.jpg"></div>
-</div>-->
 <div class="listing" data-link="mariovoid.html">
     <div class="info"><span class="title">Super Mario Void</span>
         <br> <span class="description">Web design and development</span></div>
-        <div class="images"><img class="lozad" data-src="mariovoid/thumbnail.png"><img class="lozad" data-src="mariovoid/gameover.png"></div>
+        <div class="images"><img class="lozad" data-src="mariovoid/thumbnail-thumbnail.png"><img class="lozad" data-src="mariovoid/gameover-thumbnail.png"></div>
 </div>
 
 <div class="listing" data-link="sober21.html">
     <div class="info"><span class="title"></i>Sober 21</i></span>
     <br><span class="description">The Creative Independent</span></div>
-    <div class="images"><img class="lozad" data-src="sober21/IMG_6556.jpg"><img class="lozad" data-src="sober21/IMG_6445 copy.jpg"></div>
+    <div class="images"><img class="lozad" data-src="sober21/IMG_6556-thumbnail.jpg"><img class="lozad" data-src="sober21/IMG_6445-thumbnail.jpg"></div>
 </div>
-
-<!--<div class="listing" data-link="tci5.html">
-    <div class="info"><span class="title">TCI Turns 5</span>
-    <br><span class="description">The Creative Independent</span></div>
-    <div class="images"><img src="tci5/tci58.png"><img src="tci5/tci513.png"></div>
-</div>-->
 
 <div class="listing" data-link="reconnatypeface.html">
     <div class="info"><span class="title">Reconna</span>
     <br> <span class="description">Type Design</span></div>   
-    <div class="images"><img class="lozad" data-src="reconna/IMG_1237-2.jpg"><img class="lozad" data-src="reconna/IMG_1234-2.jpg"></div>
+    <div class="images"><img class="lozad" data-src="reconna/IMG_1237-thumbnail.jpg"><img class="lozad" data-src="reconna/IMG_1234-thumbnail.jpg"></div>
 </div>
-
-<!--<div class="listing" data-link="armour.html">
-    <div class="info"><span class="title">Armour Magazine</span>
-    <br><span class="description">Creative Direction</span></div> 
-     <div class="images"><img src="armour/dadcore.jpg"><img src="armour/relevant.jpg"></div>
-</div>-->
 
 <div class="listing" data-link="reflections.html">
     <div class="info"><span class="title">Reflections on Practice</span>
     <br><span class="description">Editorial Design<br></span></div>
-    <div class="images"><img class="lozad" data-src="reflections/IMG_6544-copy.jpg"><img class="lozad" data-src="reflections/IMG_6714-copy.jpg"></div>
+    <div class="images"><img class="lozad" data-src="reflections/IMG_6544-thumbnail.jpg"><img class="lozad" data-src="reflections/IMG_6714-thumbnail.jpg"></div>
 </div>
-
-<!--<div class="listing" data-link="majorarcana.html">
-    <div class="info"><span class="title">Cocktails of the Major Arcana</span>
-    <br><span class="description">Design and Illustration</span></div>
-    <div class="images"><img src="majorarcana/IMG_2527-copy.jpg"><img src="majorarcana/IMG_2446-copy.jpg"></div> 
-</div>-->
 
 <div class="listing" data-link="postcursor.html">
     <div class="info"><span class="title">Postcursor / Starrynite</span>
     <br><span class="description">Machine learning, web development</span></div>
-    <div class="images"><img class="lozad" data-src="postcursor/postcursor-02.png"><img class="lozad" data-src="postcursor/postcursor-04.png"></div>
+    <div class="images"><img class="lozad" data-src="postcursor/postcursor-02-thumbnail.png"><img class="lozad" data-src="postcursor/postcursor-04-thumbnail.png"></div>
 </div>
 
 
