fossora case study added

--- a/fossora.html
+++ b/fossora.html
@@ -5,14 +5,14 @@
     <link rel="stylesheet" href="css/projects.css">
     <link rel="shortcut icon" type="image/png" href="assets/bigfavicon.png"/>
 
-    <title>mikki.studio: Fossora</title>
+    <title>mikki.studio: Björk | fossora</title>
     <meta property="og:image" content="mhns/mhns.png">
 </head>
 
 <body>
     <section class="top">
         <a class="name"></a>
-        <a class="projectTitle">Fossora</a>
+        <a class="projectTitle">Björk: fossora</a>
     </section>
 
     <section id="project" style="display:none">
@@ -20,52 +20,23 @@
 <!--------------------------insert project information below this line----------------------->
 
     <div id="description">
-        <p><i>Money Has No Smell</i> presents works by three artists: Ignacio Gatica, Mariana Parisca, and Gabriella Torres-Ferrer. Curated by <a href="https://www.acompi.nyc/money-has-no-smell" target="_blank">ACOMPI</a> (Jack Radley and Constanza Valenzuela) and mentored by Rosario Güiraldes, the exhibition brings together recent works that trace flows of currency to and from the artists’ places of origin, in the process addressing the complexity of globalized and interdependent financial systems.</p>
-        <p>The exhibition's identity co-opts the language of capital, acknowledging its staying power, ubiquity, and bizarre camp. Pinned beneath a labyrinth of vector art — pulled from cryptocurrency renders and flattened into a simulated watermark — lies the exhibition's logo, set in a typeface recognizable by its presence on NYPD's headquarters; Chilean government communications; and other emblems of capitalist authority. The accompanying catalogue, set in both orientations, asks the viewer to consider its content from multiple angles.</p>
-    <p>To learn more about <i>Money Has No Smell</i> and its artworks, visit <a href="https://cueartfoundation.org/money-has-no-smell" target="_blank">CUE Art Foundation,</a> a nonprofit that works to present varied perspectives in the arts.</p></div>
+        <p>Immersive web design surrounding the release of fossora, the tenth studio album by Björk.</p>
+        <p>A follow-up to Utopia (2017), fossora explores a fungal wonderland rich with mycelial networks, human entanglements, and thundrous basslines. fossora.com builds a panoramic environment around the album, siting dazzling video stills, behind-the-scenes content, and written commentary within a lush, dark landscape.</p>
+        <p>Currently in its beginning stages, the site will roll out in phases over the coming month. Built in community with Björk, OLI Records, M/M Paris, and the creative team at Squarespace.</p>
+        <p>Album artwork and CGI: M/M Paris</a><br>
+        Creative Director: Satu Pelkonen<br>
+        Creative Consultant: Albert Chang<br>
+        Producer: Sion Prys<br>
+        Developer: Siman Li<br>
+        Made with Squarespace </p></div>
     </div>
 
     <div id="gallery">
-        <img src="mhns/mhns.png">
-            <img class="lozad" data-src="mhns/mhns4.png">
-            <img class="lozad" data-src="mhns/mhns3.png">
-            <div data-class="caption">Web and social graphics for <i>Money Has No Smell</i>.<span class="citation">Typeset in Friz Quadrata Pro by Ernst Friz and Victor Caruso; and Radion A by General Type Studio.</span></div>
-            <img class="lozad" data-src="mhns/catgalog.gif">
-            <div class="diptych">
-                <img class="lozad" data-src="mhns/mhns5.png">
-                <img class="lozad" data-src="mhns/mhns13.png">  
-            </div>
-            <div class="diptych">
-                <img class="lozad" data-src="mhns/mhns6.png">
-                <img class="lozad" data-src="mhns/mhns7.png">  
-            </div>
-            <div class="diptych">
-                <img class="lozad" data-src="mhns/mhns16.png">
-                <img class="lozad" data-src="mhns/mhns12.png">  
-            </div>
-            <div class="diptych">
-                <img class="lozad" data-src="mhns/mhns15.png">
-                <img class="lozad" data-src="mhns/mhns8.png">  
-            </div>
-            <img class="lozad" data-src="mhns/mhns20.png">
-            <img class="lozad" data-src="mhns/mhns18.png">
-            <div class="caption">Exhibition Catalog for <i>Money Has No Smell</i><span class="citation">Typeset in Radion A by General Type Studio; printed by Conveyor Press</span></div>
-            
-            <img class="lozad" data-src="mhns/jenica_heintzelman2.jpeg"></img>
-            <div class="diptych">
-                <img class="lozad" data-src="mhns/jenica_heintzelman.jpeg">
-                <img class="lozad" data-src="mhns/jenica_heintzelman1.jpeg">  
-            </div>
-            <div class="caption">Exhibition graphics at the opening of <i>Money Has No Smell</i><span class="citation">Photographs by Jenica Heintzelman</span></div>
-            <div class="diptych">
-                <img class="lozad" data-src="mhns/jenica_heintzelman-9568.jpg">
-                <img class="lozad" data-src="mhns/jenica_heintzelman-9698.jpg">  
-            </div>
-            <div class="diptych">
-                <img class="lozad" data-src="mhns/jenica_heintzelman-9638.jpg">
-                <img class="lozad" data-src="mhns/jenica_heintzelman-9805.jpg">  
-            </div>
-            <div class="caption">Exhibition details from <i>Money Has No Smell</i><span class="citation">Photographs by Jenica Heintzelman</span></div>
+        <img src="fossora/fossora_documentation2.png">
+            <img class="lozad" data-src="fossora/fossora_documentation.png">
+            <img class="lozad" data-src="fossora/fossora_documentation3.png">
+            <img class="lozad" data-src="fossora/fossora_documentation4.png">
+            <div class="caption">Stills from "atopos", the album's leading single. Full site coming soon.</div>
     </div>
        
     <div id="projfooter">
