--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
         </section>
 </div>
 
+<div class="listing"  data-link="fossora.html">
+    <div class="info"><span class="title">fossora</span>
+    <br><span class="description">Björk</span></div>
+    <div class="images"><img src="fossora/bjork-atopos-thumbnail.png"><img src="fossora/bjork-atopos-thumbnail2.png"></div>
+</div>
+
 <div class="listing"  data-link="mhns.html">
     <div class="info"><span class="title"><i>Money Has No Smell</i></span>
     <br><span class="description">CUE Art Foundation</span></div>
