--- a/fossora.html
+++ b/fossora.html
@@ -22,7 +22,7 @@
     <div id="description">
         <p>Immersive web design surrounding the release of fossora, the tenth studio album by Björk.</p>
         <p>A follow-up to Utopia (2017), fossora explores a fungal wonderland rich with mycelial networks, human entanglements, and thunderous basslines. fossora.com builds an environment around the album, siting video stills, behind-the-scenes content, and written commentary within a lush, dark landscape.</p>
-        <p>The site will grow and expand in phases over the coming month. Built in community with Björk, OLI Records, M/M Paris, and the creative team at Squarespace.</p>
+        <p>The site will grow in phases over the coming month. Built in community with Björk, OLI Records, M/M Paris, and the creative team at Squarespace.</p>
         <p>Album artwork and CGI: M/M Paris</a><br>
         Creative Director: Satu Pelkonen<br>
         Creative Consultant: Albert Chang<br>
