--- a/fossora.html
+++ b/fossora.html
@@ -20,23 +20,41 @@
 <!--------------------------insert project information below this line----------------------->
 
     <div id="description">
-        <p>Immersive web design surrounding the release of fossora, the tenth studio album by Björk.</p>
-        <p>A follow-up to Utopia (2017), fossora explores a fungal wonderland rich with mycelial networks, human entanglements, and thunderous basslines. fossora.com builds an environment around the album, siting video stills, behind-the-scenes content, and written commentary within a lush, dark landscape.</p>
-        <p>The site will grow in phases over the coming month. Built in community with Björk, OLI Records, M/M Paris, and the creative team at Squarespace.</p>
+        <p>Immersive virtual environment for fossora, the tenth studio album by Björk. A follow-up to Utopia (2017), fossora explores a fungal wonderland rich with mycelial networks, human entanglements, and thunderous basslines. In digital space, the album unfolds into a lush, dark landscape, siting excerpts; marginalia; and written commentary from Björk. </p>
+        <p>The site will be launch in stages — in step with the eponymous album's content — over the coming weeks. Built between NYC and Reykjavík in community with Björk, OLI Records, M/M Paris, and the creative team at Squarespace.</p>
         <p>Album artwork and CGI: M/M Paris</a><br>
-        Creative Director: Satu Pelkonen<br>
+        Creative Directors: Satu Pelkonen, Ben Hughes<br>
+        Producers: Sion Prys, Erica Kung<br>
         Creative Consultant: Albert Chang<br>
-        Producer: Sion Prys<br>
         Developer: Siman Li<br>
-        Made with Squarespace </p></div>
+        Made with Squarespace<br></p></div>
     </div>
 
     <div id="gallery">
-        <img src="fossora/fossora_documentation2.png">
-            <img class="lozad" data-src="fossora/fossora_documentation.png">
-            <img class="lozad" data-src="fossora/fossora_documentation3.png">
-            <img class="lozad" data-src="fossora/fossora_documentation4.png">
-            <div class="caption">Stills from "atopos", the album's leading single. Full site coming soon.</div>
+        <img src="fossora/bjork-ovule-21.jpg">
+
+        <div class="subhead">a2. ovule </div>
+            <img class="lozad" data-src="fossora/bjork-ovule-2.jpg">  
+            <img class="lozad" data-src="fossora/bjork-ovule-9.jpg">
+            <img class="lozad" data-src="fossora/bjork-ovule-10.jpg">
+            <img class="lozad" data-src="fossora/bjork-ovule.jpg">  
+            <div class="diptych">
+                <img class="lozad" data-src="fossora/bjork-ovule-6.jpg">  
+                <img class="lozad" data-src="fossora/bjork-ovule-8.jpg">
+            </div>
+            <div class="diptych">
+                <img class="lozad" data-src="fossora/bjork-ovule-11.jpg">  
+                <img class="lozad" data-src="fossora/bjork-ovule-5.jpg">
+            </div>
+            <img class="lozad" data-src="fossora/bjork-ovule-4.jpg"> 
+            <img class="lozad" data-src="fossora/bjork-ovule-15.jpg"> 
+            <div class="caption">Featuring stills from ovule, directed by Nick Knight and costumed by Alessandro Michele for Gucci.</div>
+        <div class="subhead">a1. atopos </div>
+            <img class="lozad" data-src="fossora/bjork-ovule-19.jpg">
+            <img class="lozad" data-src="fossora/bjork-ovule-18.jpg">
+            <img class="lozad" data-src="fossora/bjork-ovule-16.jpg">
+
+            <div class="caption">Featuring stills from atopos, directed by Vidar Logi and costumed by Burberry.</div>
     </div>
        
     <div id="projfooter">
