--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <div class="listing"  data-link="fossora.html">
     <div class="info"><span class="title">fossora</span>
     <br><span class="description">Björk</span></div>
-    <div class="images"><img src="fossora/bjork-atopos-thumbnail.png"><img src="fossora/bjork-atopos-thumbnail2.png"></div>
+    <div class="images"><img src="fossora/bjork-ovule-thumbnail1.jpg"><img src="fossora/bjork-ovule-thumbnail2.jpg"></div>
 </div>
 
 <div class="listing"  data-link="mhns.html">
