--- a/fossora.html
+++ b/fossora.html
@@ -32,6 +32,7 @@
 
     <div id="gallery">
         <img src="fossora/bjork-ovule-21.jpg">
+        <img src="fossora/bjork-ovule-24.jpg">
 
         <div class="subhead">a2. ovule </div>
             <img class="lozad" data-src="fossora/bjork-ovule-2.jpg">  
