--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <div class="listing"  data-link="community.html">
     <div class="info"><span class="title"><i>A Community is a Garden</i></span>
     <br><span class="description">The Guggenheim Museum</span></div>
-    <div class="images"><img src="community/contents-thumbnail.jpg"><img src="community/cover-thumbnail.jpg"></div>
+    <div class="images"><img class="lozad" data-src="community/contents-thumbnail.jpg"><img class="lozad" data-src="community/cover-thumbnail.jpg"></div>
 </div>
 
 <div class="listing" data-link="leren.html">
