client list change

--- a/index.html
+++ b/index.html
@@ -24,20 +24,20 @@
         <section class="clients">
            <div class="col1">
             <p style="opacity:.5; margin-bottom:4px;">Select Clients</p>
-            <a href="https://cueartfoundation.org" target="_blank">CUE Art Foundation</a><br>
+            <a href="https://nytimes.com" target="_blank">The New York Times</a><br>
+            <a href="https://bjork.com" target="_blank">Björk</a><br>
+            <a href="https://guggenheim.org" target="_blank">The Guggenheum Museum</a><br>
             <a href="https://thebaffler.com" target="_blank">The Baffler</a><br>
-            <a href="https://undocumentedmigrationproject.org" target="_blank">Undocumented Migration Project</a><br>
-            <a href="https://acompi.nyc" target="_blank">ACOMPI</a><br>
             <a href="https://princeton.edu" target="_blank">Princeton University</a>
            </div>
               
            <div class="col2">
             <p style="opacity:0; margin-bottom:4px;">Select Clients</p>
-            <a href="https://lea-architecture.com" target="_blank">Lea Architecture</a><br>
+            <a href="https://cueartfoundation.org" target="_blank">CUE Art Foundation</a><br>
             <a href="https://nike.com" target="_blank">Nike</a><br>
             <a href="https://kickstarter.com" target="_blank">Kickstarter</a><br>
             <a href="https://thecreativeindependent.com" target="_blank">The Creative Independent</a><br>
-            <a href="https://zone6mgmt.com" target="_blank">Zone 6 Management</a>
+            <a href="https://acompi.nyc" target="_blank">ACOMPI</a><br>
            </div>
         </section>
 </div>
