press links update

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
        <h3 class="p"><p>Mikki Janower is a multidisciplinary designer and researcher logging on from Brooklyn, NY. She's currently a brand designer at <a href="https://www.squarespace.com/" target="_blank">Squarespace</a>; and maintains an independent practice across media, music, and the arts.</h3>
         <section class = "twocols">
             <div class="contact"><p style="opacity:.5; margin-bottom:4px;">Contact</p><a href="mailto:info@mikki.studio" target="_blank">Email</a><br><a href="https://www.instagram.com/_miikki/" target="_blank"> Instagram</a><br><a href="https://twitter.com/mikkijanower" target="_blank"> Twitter</a><br><a href="https://www.are.na/mikki-janower" target="_blank"> Are.na</a><!--<br><a href="https://www.goodreads.com/user/show/95316335-mikki-janower" target = "_blank">Goodreads</a><br>--></div>
-            <div class="press"><p style="opacity:.5; margin-bottom:4px;">Press & Awards</p><p><a href="https://thedesignkids.org/awards/tdk-awards-20/" target="_blank">TDK Awards 2020</a><br><a href="https://www.commonfield.org/convenings/4496/program/4858/a-community-is-a-garden-tools-for-collaboration" target="_blank">Common Fields: Tools for Collaboration</a><br><a href="https://readymag.com/u1881633060/2361167/" target="_blank">Guggenheim: Sustainable Futures</a><br><a href="https://samfoxschool.wustl.edu/people/alumni-spotlights/19-mikki-janower-bfa-in-communication-design-20" target="_blank">Sam Fox Alumni Spotlight</a></p></div>
+            <div class="press"><p style="opacity:.5; margin-bottom:4px;">Features & Awards</p><p>Embajada Gallery, NADA Miami 2022<br>Common Fields 2021: Tools for Collaboration<br><a href="https://thedesignkids.org/awards/tdk-awards-20/" target="_blank">TDK Awards 2020</a><br><a href="https://readymag.com/u1881633060/2361167/" target="_blank">Guggenheim: Sustainable Futures</a><br><a href="https://samfoxschool.wustl.edu/people/alumni-spotlights/19-mikki-janower-bfa-in-communication-design-20" target="_blank">Sam Fox Alumni Spotlight</a></p></div>
         </section>
     
         <section class="clients">
@@ -128,7 +128,7 @@
 
 
 <div class="more">
-  <p>Design and development: Mikki Janower, 2022</p>
+  <p>Resume and information available upon request<br>Design and development: Mikki Janower, 2022</p>
 </div>
 
 <!-----------------scripts and end tags below — do not touch---------->
